--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ hiplot==0.1.33
 matplotlib==3.7.1
 numpy==1.24.3
 pandas==2.1.1
+plotly==5.9.0
 scikit_learn==1.3.0
 seaborn==0.13.0
 streamlit==1.26.0
